# rec_macro

declare/: Cargo.toml
declare/src/: main.rs
mac/: Cargo.toml
mac/src/: lib.rs
