[package]
name = "mac"
version = "0.1.0"
authors = ["Unknown"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full", "extra-traits"] }
proc-macro-hack = "*"
quote = "*"
proc-macro2 = "*"